add acl template; update macros.tex in other templates

--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Compile IEEE paper
         run: cd ieee-paper && make
 
+      - name: Compile ACL paper
+        run: cd acl-paper && make
+
       - name: Compile standalone paper
         run: cd standalone && make
 
@@ -28,6 +31,7 @@ jobs:
         run: |
           cp acm-paper/main.pdf acm-paper.pdf
           cp ieee-paper/main.pdf ieee-paper.pdf
+          cp acl-paper/main.pdf acl-paper.pdf
           cp standalone/main.pdf standalone.pdf
 
       - name: Update git tag
@@ -42,5 +46,5 @@ jobs:
           tag: auto-compile
           body: automatically compiled on sha ${{ github.sha }}
           allowUpdates: true
-          artifacts: "acm-paper.pdf,ieee-paper.pdf,standalone.pdf"
+          artifacts: "acm-paper.pdf,ieee-paper.pdf,acl-paper.pdf,standalone.pdf"
           prerelease: true 
